--- a/src/Layouts/Main.css
+++ b/src/Layouts/Main.css
@@ -5,7 +5,9 @@
   bottom: 0;
 }
 
-.main-body {
+.main-body { 
   width: 100%;
-  padding: 20px 50px;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 40px;
 }
